[package]
name = "pylestia_rust"
version = "0.2.1"
edition = "2021"

[lib]
name = "pylestia_core"
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
celestia-types = { version = "0.11.0", features = ["p2p"] }

[features]
celestia-types = []
